fix(button): prevent initial transition flicker
Closes #16817

Define --_button-transition in button theme and temporarily disable
transitions during init, restoring them on the next animation frame to
avoid style flickering.

--- a/projects/igniteui-angular/core/src/core/styles/components/button/_button-theme.scss
+++ b/projects/igniteui-angular/core/src/core/styles/components/button/_button-theme.scss
@@ -295,8 +295,6 @@
         align-items: center;
         justify-content: center;
         min-width: $button-width;
-        contain: layout paint style;
-        will-change: border-color, background-color, color, box-shadow;
         padding-inline: pad-inline(
             map.get($button-padding-inline, 'compact'),
             map.get($button-padding-inline, 'cosy'),
@@ -359,10 +357,7 @@
     }
 
     %igx-button--flat {
-        --component-size: var(
-            --ig-size,
-            #{var-get($flat-theme, 'default-size')}
-        );
+        --component-size: var(--ig-size, #{var-get($flat-theme, 'default-size')});
         background: var-get($flat-theme, 'background');
         color: var-get($flat-theme, 'foreground');
         border-radius: var-get($flat-theme, 'border-radius');
@@ -465,10 +460,7 @@
     }
 
     %igx-button--outlined {
-        --component-size: var(
-            --ig-size,
-            #{var-get($outlined-theme, 'default-size')}
-        );
+        --component-size: var(--ig-size, #{var-get($outlined-theme, 'default-size')});
         background: var-get($outlined-theme, 'background');
         color: var-get($outlined-theme, 'foreground');
         border-color: var-get($outlined-theme, 'border-color');
@@ -588,10 +580,7 @@
     }
 
     %igx-button--contained {
-        --component-size: var(
-            --ig-size,
-            #{var-get($contained-theme, 'default-size')}
-        );
+        --component-size: var(--ig-size, #{var-get($contained-theme, 'default-size')});
         color: var-get($contained-theme, 'foreground');
         background: var-get($contained-theme, 'background');
         border-color: var-get($contained-theme, 'border-color');
@@ -722,10 +711,7 @@
     }
 
     %igx-button--fab {
-        --component-size: var(
-            --ig-size,
-            #{var-get($fab-theme, 'default-size')}
-        );
+        --component-size: var(--ig-size, #{var-get($fab-theme, 'default-size')});
         padding-block: pad-block(
             map.get($button-floating-padding-block, 'compact'),
             map.get($button-floating-padding-block, 'cosy'),
@@ -818,9 +804,7 @@
             &::after {
                 @extend %fluent-border;
                 $btn-indent: rem(2px);
-                border-radius: calc(
-                    #{var-get($fab-theme, 'border-radius')} - #{$btn-indent}
-                );
+                border-radius: calc(#{var-get($fab-theme, 'border-radius')} - #{$btn-indent});
                 box-shadow: 0 0 0 rem(1px) var-get($fab-theme, 'focus-visible-border-color');
             }
         }
